@@ -26,53 +26,59 @@ has 'dir_out' => (
     default => _mk_temp_dir(),
 );
 
-sub _mk_temp_dir { return tempdir( DIR => "/tmp" ) . '/'; }
+sub _mk_temp_dir {
+    return tempdir( DIR => "/tmp/", CLEANUP => 1 ) . '/';
+}
 
 sub _optimize_png {
     my ($self) = @_;
-    my $crush = App::PNGCrush->new();
+    my $crush = App::PNGCrush->new() or return;
+    my $final_image = $self->dir_out . $self->image->_basename;
     $crush->set_options(
         ( "-d", $self->dir_out, "-rem", "alla", "-brute", "1" ),
         remove => [qw(gAMA cHRM sRGB iCCP)], );
-    $crush->run( $self->image->path ) or croak $!;
-    my $image = $self->dir_out . $self->image->_basename;
-    croak "Error on PNG optimization" if ( !-f $image );
-    return ( Image->new( { path => $image } ) );
+    $crush->run( $self->image->path ) or confess $!;
+    confess "Error on PNG optimization: " . $crush->error
+        if ( $crush->error or !-f $final_image );
+    return ( Image->new( { path => $final_image } ) );
 }
 
 sub _optimize_jpg {
     my ($self) = @_;
-    my @cmd = (
-        "jpegtran", "-copy", "none", "-optimize", "-perfect", "-outfile",
-        $self->dir_out . $self->image->_basename,
-        $self->image->path,
+    my $final_image = $self->dir_out . $self->image->_basename;
+    my $proc = Proc::Reliable->new() or return;
+    my $output = $proc->run(
+        [   "jpegtran",   "-copy",
+            "none",       "-optimize",
+            "-perfect",   "-outfile",
+            $final_image, $self->image->path,
+        ]
     );
-    my $proc = Proc::Reliable->new();
-    $proc->run(@cmd);
-    croak "Jpegtran Error:" . $proc->stderr() if $proc->status();
-    croak $! if ( system(@cmd) != 0 );
-    my $image = $self->dir_out . $self->image->_basename;
-    croak "Error on JPG optimization" if ( !-f $image );
-    return ( Image->new( { path => $image } ) );
+    confess "Jpegtran Error: $output (" . $self->image->path . ")"
+        if ( $proc->status() or !-f $final_image );
+    return ( Image->new( { path => $final_image } ) );
 }
 
 sub _optimize_gif {
-    my ($self)     = @_;
-    my $magick     = Graphics::Magick->new();
+    my ($self) = @_;
+    my $magick = Graphics::Magick->new() or return;
     my $output_png = $self->dir_out . $self->image->_basename . '.png';
     $magick->Read( $self->image->path );
     $magick->Write($output_png);
-    croak "Error on GIF optimization" if ( !-f $output_png );
+    confess "Error on GIF optimization" if ( !-f $output_png );
     return ( Image->new( { path => $output_png } ) );
 }
 
 sub run {
     my ($self) = @_;
 
+    confess "No image object." if ( !$self->{image} );
+
     if ( $self->image->type =~ /image.*gif/ ) {
         $self->{last_image} = $self->{image};
-        $self->{image}      = $self->_optimize_gif();
-        $self->{dir_out}    = $self->_mk_temp_dir();
+        $self->{image}      = $self->_optimize_gif()
+            or confess "Could not optimize Gif.";
+        $self->{dir_out} = $self->_mk_temp_dir();
         $self->run();
     }
 
