@@ -24,59 +24,57 @@ my $size_before = 0;
 my $size_after  = 0;
 
 foreach my $site ( read_file('t/image_urls.txt') ) {
-    chomp $site;
-    diag("\n$site");
+    next if ( $site =~ /^\#/ );
+    chomp($site);
+    diag( sprintf( "\n* Images from: %s\n", $site ) );
 
-    $mech->get($site) or next;
+    $mech->get($site)
+        or next;
 
     foreach my $img_url (
         $mech->find_all_images( url_regex => qr/\.(png|jpg|jpeg|gif)/i ) )
     {
-        $mech->get( $img_url->url ) or next;
+        $mech->get( $img_url->url )
+            or die $!;
 
         my $uri = $img_url->URI();
-        my $path = $tdir . ( $uri->path_components() )[-1];
+        my $rpath = $tdir . ( $uri->path_components() )[-1];
 
-        $mech->save_content($path)
-            if !-f $path or next;
+        $mech->save_content($rpath)
+            if !-f $rpath;
 
-        my $img_before = Image->new( { path => $path } ) or next;
+        my $img_before = Image->new( { path => $rpath } ) or die $!;
         my $optimizer = Image::Optimizer->new( { image => $img_before } )
-            or next;
-        my $img_after;
-
-        eval { $img_after = $optimizer->run() };
-        print "Error: " . $@ if $@;
+            or die $!;
+        my $img_after = $optimizer->run() or die $!;
 
         ok( $img_after, "Should Pass, we can optimize an image" ) or next;
         ok( $img_after->type ) or next;
-
-        print "Debug -> img_before #", $img_before->_size, "#\n";
-        print "Debug ->  img_after #", $img_after->_size,  "#\n";
-
-        my $sum = $img_before->_size - $img_after->_size;
-
-        print "Debug ->        sum #", $sum, "#\n";
 
         ok( $img_after,
                   "Optimized: "
                 . $img_before->type
                 . " loses: "
-                . $sum
-                . " bytes." );
+                . ( $img_before->_size - $img_after->_size )
+                . " bytes." )
+            or next;
 
         $size_before += $img_before->_size;
         $size_after  += $img_after->_size;
 
-        $img_after->destroy();
+        $img_after->unlink();
     }
-
 }
 
-print "Total size before:   $size_before\n";
-print "Total size after : - $size_after\n";
-print "              Sum:   ", ( $size_before - $size_after ), "\n";
-
 done_testing();
+
+sub bytes_to_kilo($) {
+    my ($bytes) = @_;
+    return sprintf( "%0.2f", $bytes / 1024 );
+}
+
+diag( "Size before:   ", bytes_to_kilo $size_before,               " kb\n" );
+diag( "Size  after: - ", bytes_to_kilo $size_after,                " kb\n" );
+diag( "####### Sum:   ", bytes_to_kilo $size_before - $size_after, " kb\n" );
 
 __END__
