@@ -1,3 +1,10 @@
+commit: 279084ab402084fbe6e00f90adceb5e94d998ee4
+Author: Thu Aug 5 10:18:52 2010 +0200
+  Date: Otávio Fernandes <otaviof@gmail.com>
+
+	Start working on a image crawler test.
+
+
 commit: 635a0aab2836f93c5b9f809f70e4a5a085b53a8f
 Author: Wed Aug 4 18:13:42 2010 +0200
   Date: Otávio Fernandes <otaviof@gmail.com>
